<resources>
    <string name="app_name">Monitorizare Vot</string>
    <string name="loading_label">Loading…</string>
    <string name="hint_time">hh:mm</string>
    <string name="empty" />
    <string name="error_empty_credentials">Fill in your phone number and the code you received.</string>
    <string name="error_no_connection">No internet connection. Please connect and try again.</string>
    <string name="error_server">A server error has occurred</string>
    <string name="error_unknown">An unknown error has occurred</string>
    <string name="error_permission">Permission error %1$S</string>
    <string name="app_version">v%1$S app developed by</string>
    <string name="login_phone">Phone number</string>
    <string name="login_password">Code</string>
    <string name="login">Login</string>
    <string name="login_no_internet">You need to be connected to the internet to be able to log in!</string>
    <string name="onboarding_next">Next</string>
    <string name="onboarding_back">Back</string>
    <string name="onboarding_to_app">Go to app</string>
    <string name="onboarding_title_choose_language">Choose your language</string>
    <string name="onboarding_title_1">Pick your voting station</string>
    <string name="onboarding_description_1"><![CDATA[<html><b>STEP 1:</b><br/>Define the polling station you are in, choosing the county and its number.<br/><br/><b>STEP 2:</b><br/>Add some details about the polling station you are in (urban/rural area, details about the head of the polling committee, your arrival time). Don’t worry, you can edit the information later.</html>]]></string>
    <string name="onboarding_title_2">Fill in the forms</string>
    <string name="onboarding_description_2"><![CDATA[<html>In order to help you detect problems, we provide some forms with the standard rules for a polling station.<br/>On each form you can mark whether certain procedures have been followed or not.</html>]]></string>
    <string name="onboarding_title_3">Add notes</string>
    <string name="onboarding_description_3"><![CDATA[<html>Did you notice any problem that does not appear in the form? Use the ‘<b>Add note</b>’ button, write a message and/or attach a picture.</html>]]></string>
    <string name="title_polling_station_selection">Choose your polling station</string>
    <string name="title_polling_station">Polling station details</string>
    <string name="title_visited_stations">Visited polling stations</string>
    <string name="title_forms_list">Forms</string>
    <string name="title_note">Notes</string>
    <string name="title_guide">Guide</string>
    <string name="polling_station">Polling station %1$d %2$s %3$s %4$s</string>
    <string name="menu_forms">Forms</string>
    <string name="menu_change_polling_station">Change the polling station</string>
    <string name="menu_guide">Observer\'s guide</string>
    <string name="menu_safety">Voting safety</string>
    <string name="menu_obs_feedback">Observers feedback</string>
    <string name="menu_call">Call the Hotline</string>
    <string name="menu_about">About</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_visited_stations">My visited stations</string>
    <string name="menu_settings">About</string>
    <string name="polling_station_title">Choose the polling station you are in</string>
    <string name="polling_station_province">Voivodeship</string>
    <string name="polling_station_county">County/District</string>
    <string name="polling_station_municipality">Municipality</string>
    <string name="polling_station_number">Polling station number</string>
    <string name="polling_station_spinner_choose">Choose</string>
    <string name="polling_station_spinner_choose_county">Choose county</string>
    <string name="polling_station_spinner_choose_municipality">Choose municipality</string>
    <string name="polling_station_number_hint">Fill in your polling station number</string>
    <string name="button_continue">Continue</string>
    <string name="button_select_visited">Select from visited stations</string>
    <string name="number_hint">Number</string>
    <string name="invalid_polling_station_province">Choose the province</string>
    <string name="invalid_polling_station_county">Choose the county/district</string>
    <string name="invalid_polling_station_municipality">Choose the municipality</string>
    <string name="invalid_polling_station_number">Fill in the polling station number</string>
    <string name="invalid_polling_station_number_minus">The number of the station must be positive</string>
    <string name="invalid_polling_station_number_max">The maximum number for %1$s province %2$s county %3$s municipality is %4$d</string>
    <string name="invalid_polling_station_number_of_voters_on_the_list">Fill in the voters on the list</string>
    <string name="invalid_polling_station_number_of_commission_members">Fill in the value for commission members</string>
    <string name="invalid_polling_station_number_of_female_members">Fill in the value for number of female members in commission</string>
    <string name="invalid_polling_station_min_present_members">Fill in the value of minimum number of members</string>
    <string name="invalid_polling_station_chairman_presence">Select chairman presence</string>
    <string name="invalid_polling_station_single_commission">Select single commission</string>
    <string name="invalid_polling_station_adequate_size">Select polling station is adequate size</string>
    <string name="polling_station_change">Change</string>
    <string name="polling_station_question_number_of_voters_on_list">The number of voters in the electoral roll in a given commission</string>
    <string name="polling_station_question_number_of_commission_members">Number of committee members</string>
    <string name="polling_station_question_number_of_female_members">Number of women on the committee</string>
    <string name="polling_station_question_minimum_present_members">Lowest number of committee members present (at time of observation)</string>
    <string name="polling_station_question_chairman_presence">Was the Chairman or Deputy Chairman of the committee always present?</string>
    <string name="polling_station_question_single_polling_station_or_commission">Is there only one polling station (electoral commission) in the room?</string>
    <string name="polling_station_question_adequate_polling_station_size">Was the size of the polling station adequate to the needs of the voting day?</string>
    <string name="polling_station_answer_yes">Yes</string>
    <string name="polling_station_answer_no">No</string>
    <string name="polling_station_question_enter">Arrival date &amp; time</string>
    <string name="polling_station_question_leave">Departure date &amp; time</string>
    <string name="polling_station_choose_date_enter">Choose the date of your arrival</string>
    <string name="polling_station_choose_time_enter">Choose the time of your arrival</string>
    <string name="polling_station_choose_date_leave">Choose the date of your departure</string>
    <string name="polling_station_choose_time_leave">Choose the time of your departure</string>
    <string name="button_continue_to_forms">Continue to forms</string>
    <string name="invalid_polling_station_environment">Choose urban or rural</string>
    <string name="invalid_polling_station_time_in">Select the time of arrival</string>
    <string name="invalid_time_input">Arrival needs to be before departure</string>
    <string name="polling_station_visited">Polling station %1$d from %2$s %3$s - %4$s</string>
    <string name="polling_station_visited_label">This is the list of stations you already visited. Tap one to view or edit its submitted answers.</string>
    <string name="form_notes">Add a message</string>
    <string name="sync_info">It appears that some of the questions have not been synchronised. Tap the button below to send the answers again</string>
    <string name="sync_info_success">All the answers and notes were synchronized successfully</string>
    <string name="sync_manual">Synchronize data manually</string>
    <string name="form_sync_no_internet">You need to be connected to the internet to be able to sync the data!</string>
    <string name="error_no_form_data">There is no data for this form.</string>
    <string name="forms_sync_failed_description">Syncing forms failed</string>
    <string name="forms_sync_failed_retry">Retry</string>
    <string name="section_title">Section %1$d - %2$s</string>
    <string name="question_next">Next</string>
    <string name="question_previous">Previous</string>
    <string name="question_finish">Send</string>
    <string name="sync_locally_saved">saved locally</string>
    <string name="add_note_to_question">Add note to current question</string>
    <string name="view_add_note_to_question">View/add notes to current question</string>
    <string name="add_note">Add a note</string>
    <string name="note_description_hint">Type here</string>
    <string name="note_media">Add photo or video</string>
    <string name="invalid_note">Add a description or choose a file</string>
    <string name="error_note_file_copy_single">Unable to attach the file. Check the app permissions and the storage space available</string>
    <string name="error_note_file_copy_multiple">Unable to attach some of the files. Check the app permissions and the storage space available</string>
    <string name="note_gallery">Load from gallery</string>
    <string name="note_photo">Take photo</string>
    <string name="note_video">Record video</string>
    <string name="select_photo">Select Photo</string>
    <string name="file_manager_missing">Please install a file manager.</string>
    <string name="note_submit">Submit</string>
    <string name="note_video_preview_notice">The attached video doesn\'t have a preview to show. Tap here to see it in an external player!</string>
    <string name="note_video_previewer_missing">There aren\'t any apps capable of showing the video!</string>
    <string name="note_details_missing_internet">You need to be connected to the internet to be able to see the attached files of a synchronized note!</string>
    <string name="notes_history">Notes history</string>
    <string name="note_details_codes">Form %1$s - Question %2$s</string>
    <string name="content_icon_building">Building icon</string>
    <string name="form_suffix" translatable="false">&#160;(%1$s)</string>
    <string name="no_answered_questions" translatable="false">%1$d/%2$d</string>
    <string name="permission_permanently_denied_title">Permission needed</string>
    <string name="permission_permanently_denied_msg">To use this function, you have to change the app permissions. Please open the Settings menu and grant access to the requested permissions.</string>
    <string name="permission_permanently_denied_settings_button">Settings</string>
    <string name="permission_denied_title">Permission needed</string>
    <string name="permission_denied_msg">To use this function we need your permission to access the storage.</string>
    <string name="permission_denied_ok_button">OK</string>
    <string name="permission_denied_cancel_button">Cancel</string>
    <string name="default_notification_channel_id" translatable="false">Firebase</string>
    <string name="push_notification_ok">OK</string>
    <string name="error_generic">Something went wrong!</string>
    <string name="about_mission">About this app</string>
</resources>