<?xml version="1.0" encoding="utf-8"?>
<ro.code4.monitorizarevot.widget.ScrollViewWithFixedBottom xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="@dimen/margin"
        android:paddingRight="@dimen/margin">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/section_header_height"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="@dimen/icon_block_size"
                android:layout_height="@dimen/icon_block_size"
                android:contentDescription="@string/content_icon_building"
                android:src="@drawable/ic_building" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/header_margin_vertial"
                android:text="@string/polling_station_title"
                android:textColor="@color/textPrimary"
                android:textSize="@dimen/header_text" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/header_margin_vertial"
                android:text="@string/polling_station_subtitle"
                android:textColor="@color/textPrimary"
                android:textSize="@dimen/subheader_text" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/polling_station_county"
                android:theme="@style/Text.Label" />
            <androidx.appcompat.widget.AppCompatSpinner
                android:id="@+id/countySpinner"
                android:layout_width="match_parent"
                android:layout_height="@dimen/button_height"
                android:background="@drawable/background_spinner"
                android:prompt="@string/spinner_choose" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:labelFor="@+id/pollingStationNumber"
                android:text="@string/polling_station_number"
                android:theme="@style/Text.Label" />

            <EditText
                android:id="@+id/pollingStationNumber"
                android:layout_width="match_parent"
                android:layout_height="@dimen/button_height"
                android:enabled="false"
                android:importantForAutofill="no"
                android:inputType="number" />

        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/continueButton"
        style="@style/Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin"
        android:text="@string/button_continue" />
</ro.code4.monitorizarevot.widget.ScrollViewWithFixedBottom>
