<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/MaterialCardView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/margin"
        android:paddingTop="@dimen/big_margin"
        android:paddingEnd="@dimen/margin"
        android:paddingBottom="@dimen/big_margin">

        <TextView
            android:id="@+id/title"
            style="@style/Text.Question"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lines="1"
            android:text="@string/add_note"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/noteInput"
            style="@style/Input.Note"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin"
            android:hint="@string/note_description_hint"
            android:importantForAutofill="no"
            android:padding="@dimen/medium_margin"
            app:layout_constraintTop_toBottomOf="@id/title" />

        <LinearLayout
            android:id="@+id/noteFilesContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/noteInput" />

        <Button
            android:id="@+id/addMediaButton"
            style="@style/Button.Text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/big_margin"
            android:text="@string/note_media"
            app:icon="@drawable/ic_note_media"
            app:layout_constraintBottom_toTopOf="@id/submitButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/noteFilesContainer" />

        <Button
            android:id="@+id/submitButton"
            style="@style/Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/big_margin"
            android:enabled="false"
            android:text="@string/note_submit"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/addMediaButton" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>